--- a/public/css/app.css
+++ b/public/css/app.css
@@ -29581,3 +29581,8 @@ readers do not read off random characters that represent icons */
   font-family: "Font Awesome 5 Brands";
 }
 
+.router-link-exact-active {
+  background-color: #3f51b5;
+  color: fff !important;
+}
+
