--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,3 +13,11 @@ $fa-font-path:        "../webfonts";
 @import "~@fortawesome/fontawesome-free/scss/solid.scss";
 @import "~@fortawesome/fontawesome-free/scss/brands.scss";
 
+
+
+
+.router-link-exact-active{
+	
+  background-color: #3f51b5;
+  color: fff !important;
+}
